# dnsperf

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  isp.rs  main.rs  output.rs  query.rs  resolver.rs  stats.rs
